<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2009 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources>
    <string name="app_name">CrazePony</string>

    <!--  BluetoothChat -->
    <string name="send">发送</string>
    <string name="not_connected">你没有连接到一个设备</string>
    <string name="bt_not_enabled_leaving">蓝牙未启用。程序退出</string>
    <string name="title_connecting">正在连接...</string>
    <string name="title_connected_to">已连接: </string>
    <string name="title_not_connected">未连接</string>
    <string name="button_clean">清屏</string>
    <string name="button_break">连接四轴</string>
    <string name="checkBox_sixteen">十六进制显示</string>
    <string name="radioMale">十六进制输出</string>
    <string name="checkBox_line_feed">换行输出</string>
    <string name="button_cleantwo">清除输入框</string>
    <string name="duankai">断开连接</string>
    <string name="prompt_message">没有数据可供查看</string>

    <!--  DeviceListActivity -->
    <string name="scanning">扫描未知设备...</string>
    <string name="select_device">选择一个设备连接</string>
    <string name="none_paired">没有已配对设备</string>
    <string name="none_found">没有建立连接</string>
    <string name="title_paired_devices">配对的装备</string>
    <string name="title_other_devices">其他可用的设备</string>
    <string name="button_scan">扫描设备</string>
     <string name="button_full_screen">全屏</string>
     <string name="button_return">返回</string>
    <!-- Options Menu -->
    <!-- Options Menu -->
    <string name="secure_connect">连接一个设备</string>
    <string name="insecure_connect">设置</string>
    <string name="discoverable">设置蓝牙可见</string>
    <string name="clenr">程序退出</string>
    
</resources>
