<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"  
android:layout_width="fill_parent" android:layout_height="fill_parent"  
android:background="@drawable/backgroud"
android:orientation="vertical">  

	

	<LinearLayout
	    android:layout_marginTop="5dp"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >   		

		 <SeekBar
		     android:id="@+id/throttle"
		     android:layout_width="238dp"
		     android:layout_height="62dp"
		     android:paddingLeft="5dp"
		     android:paddingTop="4dp"
		     android:progressDrawable="@drawable/seek_drawable" />

			<Button
	        android:id="@+id/btn_unlock"
	          android:layout_width="60dp"
	        android:layout_height="70dp"
	       android:layout_marginLeft="8dp"
	        android:text="油门解锁"
	        android:rotation="90"
	        android:textSize="15dp" 
	        android:background="@drawable/btn_style"
	       android:visibility="gone"
	       
	        />
		 </LinearLayout>

		 <LinearLayout
		     android:layout_width="wrap_content"
		     android:layout_height="wrap_content"
		     android:orientation="horizontal" >

		     <TextView
		         android:id="@+id/text_val"
		         android:layout_width="match_parent"
		         android:layout_height="wrap_content"
		         android:layout_marginLeft="50dp"
		         android:rotation="90"
		         android:layout_weight="0.28"
		         android:text="油门:\n0"
		         android:textColor="#FF6100"
		         android:textSize="20dp" />
			<TextView
				    android:id="@+id/rc_pitch"
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content"
				     android:layout_weight="0.28"
				    android:rotation="90"
				    android:text="俯仰:\n0°"
				    android:textColor="#46CEF0"
				    android:textSize="20dp" />
				<TextView
				    android:id="@+id/rc_roll"
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content"
				    android:rotation="90"
				    android:text="翻滚:\n0°"
				     android:layout_weight="0.28"
				    android:textColor="#43D90B"
				    android:textSize="20dp" />

				

				<TextView
				    android:layout_width="match_parent"
				    android:layout_height="match_parent"
				    android:layout_weight="0.28"
				    android:rotation="90"
				    android:text="遥控\n\n\n"
				  
				    android:textSize="20dp" />

		 </LinearLayout>

	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical">
	     
	    <LinearLayout     
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
	    </LinearLayout>
	    <LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
	    </LinearLayout>
	</LinearLayout>
	
	<EditText
	    android:id="@+id/editText1"
	    android:layout_width="match_parent"
	    android:layout_height="118dp"
	    android:cursorVisible="false"
	    android:editable="false"
	    android:ellipsize="end"
	    android:inputType="textMultiLine"
	    android:scrollbars="vertical"
	    android:visibility="gone" 
	    />

      
  
	<LinearLayout android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:orientation="horizontal">

		<Button android:id="@+id/button_clean"
		 android:layout_width="79dp"
			android:layout_height="wrap_content"
			 android:onClick="onMyButtonClick"
			android:text="@string/button_clean" 
			android:visibility="gone"/>
		
		 <Button android:id="@+id/button_full_screen"
		android:layout_width="79dp"
		android:layout_height="wrap_content"
		android:onClick="onMyButtonClick"
		android:layout_alignParentRight="true"
		android:text="@string/button_full_screen" 
		android:visibility="gone"/>
	</LinearLayout>
		
	<LinearLayout android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		 android:orientation="horizontal"
		 android:visibility="gone"
		 >
	<CheckBox android:id="@+id/checkBox_sixteen"
		android:layout_width="wrap_content"
		 android:layout_height="wrap_content"
		android:text="@string/checkBox_sixteen" /> 
		<CheckBox android:id="@+id/radioMale"
		 android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			 android:text="@string/radioMale" />
		</LinearLayout>
	<LinearLayout android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:orientation="horizontal"
		android:visibility="gone">

		<EditText
		    android:id="@+id/edit_text_out"
		    android:layout_width="248dp"
		    android:layout_height="wrap_content"
		    android:ellipsize="end"
		    android:inputType="textMultiLine" >

			<requestFocus />
		</EditText>
		<EditText android:id="@+id/edit_text_out2"
			android:visibility="gone"
			 android:layout_width="180dp"
			android:layout_height="80dp"
			 android:inputType="textMultiLine"
			android:digits="0123456789ABCDEF" 
			android:ellipsize="end">
			<requestFocus />
		</EditText>
		<Button android:id="@+id/button_send" 
		android:layout_width="63dp"
			android:layout_height="wrap_content"
			 android:text="@string/send" />
	</LinearLayout>
		<LinearLayout android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:orientation="vertical"
		android:layout_marginTop="0dp"
		>

			<ImageView
			    android:id="@+id/imgshow"
			    android:layout_width="318dp"
			    android:layout_height="260dp"
			    android:src="@drawable/dirphone" />

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="170dp"
      android:orientation="horizontal" >
	   
			   <Button
	        android:id="@+id/btn_save"
	        android:layout_width="60dp"
        android:layout_marginLeft="60dp"
        android:layout_height="70dp"
	         android:textSize="15dp"
	       android:rotation="90"
	       android:background="@drawable/btn_style"
	        android:text="退出程序" />
		 
		
		  <Button
	        android:id="@+id/btn_read"
	         android:layout_width="60dp"
        android:layout_marginLeft="20dp"
        android:layout_height="70dp"
	         android:textSize="15dp"
	        android:rotation="90"
	        android:background="@drawable/btn_style"
	        
	        android:text="项目官网" />
	
	   <Button
	       android:id="@+id/button_break"
	       android:layout_width="60dp"
	       android:layout_height="70dp"
	       android:layout_marginLeft="20dp"
	       android:background="@drawable/btn_style"
	       android:onClick="onMyButtonClick"
	       android:rotation="90"
	       android:text="连接四轴"
	       android:textSize="15dp" />

	</LinearLayout>
  </LinearLayout>



</LinearLayout>